versioned_docs/version-7.4.0/api/lineOffset.mdx
---
title: lineOffset
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

export function Map0() {
  "use strict";
  // No blank lines so MDX parses code block as a single "export" node.
  // jsdoc example start
  var line = turf.lineString(
    [
      [-83, 30],
      [-84, 36],
      [-78, 41],
    ],
    { stroke: "#F00" },
  );
  var offsetLine = turf.lineOffset(line, 2, { units: "miles" });
  //addToMap
  var addToMap = { offsetLine, line };
  offsetLine.properties.stroke = "#00F";
  // jsdoc example end
  return <ExampleMap addToMap={addToMap} />;
}

### Description

Takes a [line](https://tools.ietf.org/html/rfc7946#section-3.1.4) and returns a [line](https://tools.ietf.org/html/rfc7946#section-3.1.4) at offset by the specified distance.

### Parameters

| Name                  | Type                                                                                                                                                                                                                                                                                 | Description                                                                                        |
| --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------- |
| geojson               | **[Geometry](https://tools.ietf.org/html/rfc7946#section-3.1) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) &#124; [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5)&gt;** | input GeoJSON                                                                                      |
| distance              | **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)**                                                                                                                                                                                      | distance to offset the line (can be of negative value)                                             |
| options<i>?</i>       | **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)**                                                                                                                                                                                      | Optional parameters _(default &#123;&#125;)_                                                       |
| options.units<i>?</i> | **[Units](docs/api/types/Units.mdx)**                                                                                                                                                                                                                                                | Supports all valid Turf [Units](https://turfjs.org/docs/api/types/Units). _(default 'kilometers')_ |

### Returns

**[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) &#124; [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5)&gt;** Line offset from the input line

### Examples

```javascript
var line = turf.lineString(
  [
    [-83, 30],
    [-84, 36],
    [-78, 41],
  ],
  { stroke: "#F00" },
);

var offsetLine = turf.lineOffset(line, 2, { units: "miles" });
```

<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/line-offset

import { lineOffset } from "@turf/line-offset";
const result = lineOffset(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.lineOffset(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
